Working on mobile menu animations. Fixing mobile state of easter egg.

--- a/scss/layout/_mobile-offcanvas.scss
+++ b/scss/layout/_mobile-offcanvas.scss
@@ -1,14 +1,20 @@
 .mobile-offcanvas {
 	border: none !important;
-	backdrop-filter: blur(15px);
-	background-color: rgba(white, .7);
+	background-color: transparent;
 	pointer-events: all;
+	transition: background-color 0.5s, backdrop-filter 0.5s, transform 0.5s;
 
 	.offcanvas-header {
 		padding: 0;
 		@include padding-top(20px);
 	}
+	.offcanvas-body {
+		opacity: 0;
+		transition: opacity 0.5s;
+		transition-delay: 0.4s;
+	}
 	.btn-close {
+		opacity: 0;
 		position: absolute;
 		right: 30px;
 		top: 40px;
@@ -18,5 +24,36 @@
 		@include font-size(45px);
 		line-height: 1;
 		padding: rfs-fluid-value(5px) rfs-fluid-value(10px);
+		transition: opacity 0.5s;
+		transition-delay: 0.5s;
+	}
+	&.show,
+	&.showing {
+		backdrop-filter: blur(15px);
+		background-color: rgba(white, .7);
+
+		.btn-close {
+			opacity: 1;
+		}
+		.offcanvas-body {
+			opacity: 1;
+		}
+	}
+	&.show {
+		&.hiding {
+			backdrop-filter: none;
+			background-color: transparent;
+
+			.btn-close {
+				opacity: 0;
+				transition: opacity 0.25s;
+				transition-delay: 0s;
+			}
+			.offcanvas-body {
+				opacity: 0;
+				transition: opacity 0.25s;
+				transition-delay: 0s;
+			}
+		}
 	}
 }
